--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
   "name": "Thompsons Bus Services",
-  "short_name": "PWA",
+  "short_name": "Thompsons",
   "start_url": "https://thompsons-pwa-field-staff.webflow.io/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "https://cdn.prod.website-files.com/67c50bf20f70217c47afaeaf/67ef4f6cd782619dd948f3f0_thompsons-icon-192x192.png",
+      "src": "https://cdn.prod.website-files.com/67c50bf20f70217c47afaeaf/67f307792a268a4d881d66a1_thompsons-icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://cdn.prod.website-files.com/67c50bf20f70217c47afaeaf/67ef4f63067bf578f51d2409_thompsons-icon-512x512.png",
+      "src": "https://cdn.prod.website-files.com/67c50bf20f70217c47afaeaf/67f3077043f44cc07e80f859_thompsons-icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
